--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>A Freudian Impression</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="https://banner2.cleanpng.com/20190623/llb/kisspng-logo-clip-art-desktop-wallpaper-font-brand-cropped-favicon-png-5d0f5234c44375.9580937815612851728039.jpg" />
+        <link rel="icon" type="image/x-icon" href="https://freepngimg.com/download/fire/23273-3-fire-free-download.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -21,18 +21,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://bankitomi26.github.io/a_fragment_of_life/?#!">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://vtm.mke.hu/muveszettortenet/derrida_archivefever.pdf">About</a></li>
+                        </ul>
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
