--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                         <div class="fs-5 mb-5">
                             <span class="text-decoration-line-through">$45.00</span>
                             <span>$40.00</span>
+                            </div>
+                        <p class="lead">"In Archive Fever, Derrida discusses the nature and function of the archive, particularly in Freudian terms and in light of the death drive. The book also contains discussions of Judaism and Jewish identity and of electronic technology such as e-mail."</p>
                         </div>
                        <div class="d-flex">
                             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
