--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
                     <div class="col-md-6">
-                        <div class="small mb-1">SKU: BST-498</div>
-                        <h1 class="display-5 fw-bolder">Shop item template</h1>
+                        <div class="small mb-1">BTK: PIM-061</div>
+                        <h1 class="display-5 fw-bolder">"No title"</h1>
                         <div class="fs-5 mb-5">
-                            <span class="text-decoration-line-through">$45.00</span>
-                            <span>$40.00</span>
+                            <span class="text-decoration-line-through">55.000 HUF</span>
+                            <span>50.000 HUF</span>
                             </div>
                         <p class="lead">"In Archive Fever, Derrida discusses the nature and function of the archive, particularly in Freudian terms and in light of the death drive. The book also contains discussions of Judaism and Jewish identity and of electronic technology such as e-mail."</p>
                         </div>
