--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="https://bankitomi26.wixsite.com/bankifest/single-post/gesamtkunstwerk-egy-%C3%B6sszm%C5%B1v%C3%A9szeti-alkot%C3%A1s-m%C3%B3dszer%C3%A9r%C5%91l">Gesamtkunstwerk</a>
+                <a class="navbar-brand" href="">Gesamtkunstwerk</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://bankitomi26.github.io/a_fragment_of_life/?#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="http://vtm.mke.hu/muveszettortenet/derrida_archivefever.pdf">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://bankitomi26.wixsite.com/bankifest/single-post/gesamtkunstwerk-egy-%C3%B6sszm%C5%B1v%C3%A9szeti-alkot%C3%A1s-m%C3%B3dszer%C3%A9r%C5%91l">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://vtm.mke.hu/muveszettortenet/derrida_archivefever.pdf">The book</a></li>
+
                         </ul>
                    </div>
             </div>
