--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://bankitomi26.github.io/a_fragment_of_life/?#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://bankitomi26.wixsite.com/bankifest/single-post/gesamtkunstwerk-egy-%C3%B6sszm%C5%B1v%C3%A9szeti-alkot%C3%A1s-m%C3%B3dszer%C3%A9r%C5%91l">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="http://vtm.mke.hu/muveszettortenet/derrida_archivefever.pdf">The book</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://vtm.mke.hu/muveszettortenet/derrida_archivefever.pdf">Book</a></li>
 
                         </ul>
                    </div>
