--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="79695044_614445789294899_2154199237389189120_n.jpg" alt="..." /></div>
                     <div class="col-md-6">
                         <div class="small mb-1">BTK: PIM-061</div>
-                        <h1 class="display-5 fw-bolder">"No title"</h1>
+                        <h1 class="display-5 fw-bolder">"The message"</h1>
                         <div class="fs-5 mb-5">
                             <span class="text-decoration-line-through">55.000 HUF</span>
                             <span>50.000 HUF</span>
