--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>A Freudian Impression</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="ezgif.com-gif-maker (1).gif" />
+        <link rel="icon" type="image/x-icon" href="" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -34,7 +34,7 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://im7.ezgif.com/tmp/ezgif-7-1e4b1f9ef880.gif" alt="..." /></div>
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="ezgif.com-gif-maker (1).gif" alt="..." /></div>
                     <div class="col-md-6">
                         <div class="small mb-1">BTK: PIM-061</div>
                         <h1 class="display-5 fw-bolder">"The message"</h1>
