--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>A Freudian Impression</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="" />
+        <link rel="icon" type="image/x-icon" href="https://freepngimg.com/download/fire/23273-3-fire-free-download.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
