--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="ezgif.com-gif-maker (1).gif" alt="..." /></div>
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="ezgif.com-gif-maker.jpg " alt=".." /></div>
                     <div class="col-md-6">
                         <div class="small mb-1">BTK: PIM-061</div>
                         <h1 class="display-5 fw-bolder">"The message"</h1>
